app = "break-tracker"   # <- pick a unique name, lowercase letters/numbers only
primary_region = "sin"

[tool.poetry]
name = "break-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

# Tell Poetry not to install the project itself
packages = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
